# opentype-rs

./: .travis.yml  Cargo.toml  README.md
examples/: simple.rs
src/: error.rs  font.rs  lib.rs  macros.rs  nom_ext.rs  offset_table.rs  otff.rs  parser.rs  table.rs  table_record.rs  traits.rs  ttc_header.rs  types.rs
src/parser/: mod.rs  offset_table.rs  table_record.rs  ttc_header.rs
src/parser/tables/: cmap.rs  head.rs  hhea.rs  hmtx.rs  maxp.rs  mod.rs  name.rs  os2.rs  post.rs
src/tables/: cmap.rs  head.rs  hhea.rs  hmtx.rs  loca.rs  maxp.rs  mod.rs  name.rs  os2.rs  post.rs
