[package]
name = "opentype_rs"
version = "0.1.0"
authors = ["Florent Veilly <florent.veilly@gmail.com>"]
description = "Safe, fast and memory efficient OpenType font file parser"
readme = "README.md"
license = "MIT"
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
exclude = ["/fonts/**"]

[dependencies]
nom = "^4.1"
bitflags = "^1.0.4"