[package]
name = "opentype_rs"
version = "0.2.0"
authors = ["Florent Veilly <florent.veilly@gmail.com>"]
description = "Safe, fast and memory efficient OpenType font file parser"
readme = "README.md"
license = "MIT"
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
exclude = ["/fonts/**"]

[dependencies]
nom = "^5.0"
bitflags = "^1.1"
